A path is now being made for the player as it moves

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/DefaultMap.DefaultMap
 EditorStartupMap=/Game/Maps/DefaultMap.DefaultMap
+GlobalDefaultGameMode=/Script/EWheel.EndlessGameMode
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
