Array crash fix, PawnClass error fix

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/DefaultMap.DefaultMap
 EditorStartupMap=/Game/Maps/DefaultMap.DefaultMap
 GlobalDefaultGameMode=/Script/EWheel.EndlessGameMode
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -203,4 +204,7 @@ VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCal
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 IconModelPath=(Path="")
 IconPortalPath=(Path="")
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=Default
 
