Tiles are now rotated, but rotated again after a new row is generated

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=EA86AF7444BA4B389CD7F3BC05DBD3ED
+bShouldWindowPreserveAspectRatio=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
