+Lighting, Verticality, corrected tile length, Adjusted camera arm, Fixed path start (adding spline by world and not local), added hi-res mesh but lags

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,11 +16,12 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/EWheel")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/EWheel")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="EWheelGameModeBase")
-bUseFixedFrameRate=False
-FixedFrameRate=30.000000
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 bSmoothFrameRate=False
-MinDesiredFrameRate=30.000000
+MinDesiredFrameRate=60.000000
 CustomTimeStepClassName=None
+SmoothedFrameRateRange=(LowerBound=(Type=Exclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=62.000000))
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
@@ -207,4 +208,7 @@ IconPortalPath=(Path="")
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=Default
+
+[/Script/Engine.PhysicsSettings]
+BounceThresholdVelocity=99999.000000
 
