--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -96,6 +96,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Gamepad_LeftTrigger)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_DPad_Up)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Gamepad_DPad_Down)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_DPad_Right)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Gamepad_DPad_Left)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
