Fixed so that fps can be unlocked

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,12 +16,12 @@ AppliedDefaultGraphicsPerformance=Scalable
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/EWheel")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/EWheel")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="EWheelGameModeBase")
-bUseFixedFrameRate=True
+bUseFixedFrameRate=False
 FixedFrameRate=60.000000
-bSmoothFrameRate=False
+bSmoothFrameRate=True
 MinDesiredFrameRate=60.000000
 CustomTimeStepClassName=None
-SmoothedFrameRateRange=(LowerBound=(Type=Exclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=62.000000))
+SmoothedFrameRateRange=(LowerBound=(Type=Exclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=120.000000))
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
@@ -211,4 +211,6 @@ Compiler=Default
 
 [/Script/Engine.PhysicsSettings]
 BounceThresholdVelocity=99999.000000
+bSubstepping=False
+bSubsteppingAsync=False
 
