GAME IS PACKAGEABLE

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,7 +6,7 @@ bShouldWindowPreserveAspectRatio=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_DebugGame
 BuildTarget=
 StagingDirectory=(Path="C:/Users/Joste/Documents/Unreal Projects/Packaged")
 FullRebuild=True
@@ -74,4 +74,5 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/DefaultMap")
++MapsToCook=(FilePath="/Game/Maps/DefaultMap_BuiltData")
 
