--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,20 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/DefaultMap.DefaultMap
 EditorStartupMap=/Game/Maps/DefaultMap.DefaultMap
-GlobalDefaultGameMode=/Script/EWheel.EndlessGameMode
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/EWheel.EndlessGameMode
+GlobalDefaultServerGameMode=None
++GameModeMapPrefixes=(Name="MainMenuMap",GameMode=/Script/Engine.GameMode)
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
