--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,7 +6,7 @@ bShouldWindowPreserveAspectRatio=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_DebugGame
+BuildConfiguration=PPBC_Development
 BuildTarget=
 StagingDirectory=(Path="C:/Users/Joste/Documents/Unreal Projects/Packaged")
 FullRebuild=True
@@ -75,4 +75,5 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/DefaultMap")
 +MapsToCook=(FilePath="/Game/Maps/DefaultMap_BuiltData")
++MapsToCook=(FilePath="/Game/Maps/MainMenuMap")
 
