Json read func, Highscore wip

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,12 +9,12 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/GameInstanceBP.GameInstanceBP_C
 GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/EWheel.EndlessGameMode
 GlobalDefaultServerGameMode=None
-+GameModeMapPrefixes=(Name="MainMenuMap",GameMode=/Script/Engine.GameMode)
++GameModeMapPrefixes=(Name="MainMenuMap",GameMode=/Script/EWheel.EWheelGameModeBase)
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
