--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/Blueprints/GameInstanceBP.GameInstanceBP_C
+GameInstanceClass=/Script/EWheel.CustomGameInstance
 GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/EWheel.EndlessGameMode
