--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/DefaultMap.DefaultMap
+EditorStartupMap=/Game/Maps/MainMenuMap.MainMenuMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
