local split screen support

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,11 +4,11 @@
 EditorStartupMap=/Game/Maps/MainMenuMap.MainMenuMap
 LocalMapOptions=
 TransitionMap=None
-bUseSplitscreen=False
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Vertical
+ThreePlayerSplitscreenLayout=Vertical
+FourPlayerSplitscreenLayout=Vertical
+bOffsetPlayerGamepadIds=True
 GameInstanceClass=/Script/EWheel.CustomGameInstance
 GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
