--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -106,5 +106,5 @@ DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
-+ConsoleKeys=Tilde
++ConsoleKeys=Apostrophe
 
