Alternative sounds for obstacles + chase box speed increase delay

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -226,3 +226,6 @@ BounceThresholdVelocity=99999.000000
 bSubstepping=False
 bSubsteppingAsync=False
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Never
+
