Jump Fix, split screen spawn fix, phys crash fix

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -70,7 +70,7 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
 bAlwaysShowTouchInterface=False
-bShowConsoleOnFourFingerTap=True
+bShowConsoleOnFourFingerTap=False
 bEnableGestureRecognizer=False
 bUseAutocorrect=False
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
@@ -86,6 +86,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftThumbstick)
 +ActionMappings=(ActionName="TempSpeedIncrease",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="TempSpeedIncrease",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch1)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
@@ -104,7 +105,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Gamepad_DPad_Left)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
-DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
+DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
 -ConsoleKeys=Tilde
 +ConsoleKeys=Apostrophe
 
